--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+/* Main Sass File: Contains all the 7-1 Sass code */
+@use "abstracts";
+@use "vendors";
+@use "base";
+@use "layout";
+@use "components";
+@use "pages";
