--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,6 +3,9 @@
     <!-- <Link className="navbar-brand navbar__logo" to="/">
       <img src={process.env.PUBLIC_URL + 'icons/portfolio-icon.svg'} className="navbar__icon--portfolio" alt="profile logo"/>
     </Link> -->
+    <a href="#" class="navbar-brand navbar__logo">
+      <img src="../../../assets/images/portfolio-icon.svg" class="navbar__icon--portfolio"/>
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
