--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -35,9 +35,9 @@ $font-primary: 'Poppins', sans-serif;
 $font-secondary: 'Montserrat', sans-serif;
 
 /* Font-size */
-$font-size-large: 4rem;
-$font-size-medium: 2.4rem;
-$font-size-small: 1.2rem;
+$font-size-large: 3.2rem;
+$font-size-medium: 2rem;
+$font-size-small: .8rem;
 
 /* Font-weight */
 $bold: 400;
