Added new fonts

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -5,7 +5,7 @@
     <div class="hero__container--left">
         <div class="hero__details">
           <div class="hero__name">
-            LAWRENCE DOVIN
+            Lawrence Dovin
           </div>
           <div class="hero__underline--big"></div>
           <div class="hero__underline--small"></div>
