--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -33,6 +33,7 @@ $color-black: #35332C;
 /* Font-family */
 $font-primary: 'Poppins', sans-serif;
 $font-secondary: 'Montserrat', sans-serif;
+$font-hero: 'dreaming_outloud_scslantedpro', sans-serif;
 
 /* Font-size */
 $font-size-large: 4rem;
