--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -47,7 +47,7 @@
   &__name,
   &__title {
       color: variables.$color-blue-light;
-      font-family: variables.$font-secondary;
+      font-family: variables.$font-hero;
   }
 
   &__name {
@@ -78,61 +78,6 @@
       font-size: variables.$font-size-medium;
   }
 
-  &__frame {
-      background-color:#ddc;
-      border:solid 5vmin #eee;
-      border-bottom-color:#fff;
-      border-left-color:#eee;
-      border-radius:2px;
-      border-right-color:#eee;
-      border-top-color:#ddd;
-      box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
-      box-sizing:border-box;
-      display:inline-block;
-      // margin:10vh 10vw;
-      height: 40rem;
-      // width: 40vw;
-      // height:80vh;
-      // padding:8vmin;
-      position:relative;
-      text-align:center;
-      // transform: scale(1.3);
-      // top: 50%;
-      // transform: translateY(-50%);
-      &:before {
-        border-radius:2px;
-        bottom:-2vmin;
-        box-shadow:0 2px 5px 0 rgba(0,0,0,.25) inset;
-        content:"";
-        left:-2vmin;
-        position:absolute;
-        right:-2vmin;
-        top:-2vmin;
-      }
-      &:after {
-        border-radius:2px;
-        bottom:-2.5vmin;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.25);
-        content:"";
-        left:-2.5vmin;
-        position:absolute;
-        right:-2.5vmin;
-        top:-2.5vmin;
-      }
-  }
-
-
-  // &__image {
-  //     // position: absolute;
-  //     // top: 35%;
-  //     // transform: translateY(-50%);
-  //     border:solid 2px;
-  //     border-bottom-color:#ffe;
-  //     border-left-color:#eed;
-  //     border-right-color:#eed;
-  //     border-top-color:#ccb;
-  //     height: 100%;
-  // }
   &__image {
       max-width: 50vw;
       position: absolute;
