Added the zippy font

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -15,5 +15,9 @@
        url('../../assets/fonts/adventium-demo/adventiumdemoregular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+}
 
+@font-face {
+  font-family: 'zippy';
+  src: url('../../assets/fonts/zippy/Zippy.ttf') format("truetype");
 }
