--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -31,7 +31,7 @@ $color-white: #fff;
 $color-black: #35332C;
 
 /* Font-family */
-$font-primary: 'Poppins', sans-serif;
+$font-primary: 'zippy', sans-serif;
 $font-secondary: 'Montserrat', sans-serif;
 $font-hero: 'adventium_demoregular', sans-serif;
 
