Updated website colors

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,23 +1,12 @@
 /* Colors */
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-
-$color-secondary-light: #ffb900;
-$color-secondary-dark: #ff7730;
-
-$color-tertiary-light: #2998ff;
-$color-tertiary-dark: #5643fa;
-
-$color-grey-light-1: #f7f7f7;
-$color-grey-light-2: #eee;
-
-$color-grey-dark: #777;
-$color-grey-dark-2: #999;
-$color-grey-dark-3: #333;
-
 $color-white: #fff;
-$color-black:  #000;
+$color-black: #162B42;
+
+$color-green: #003810;
+$color-blue: #00BBD4;
+$color-brown: #4F3900;
+$color-red: #FF0000;
+$color-grey: #828282;
 
 $color-purple: #36015F;
 
@@ -27,8 +16,7 @@ $color-pink: #FF005C;
 
 $color-grey: #828282;
 
-$color-white: #fff;
-$color-black: #35332C;
+
 
 /* Font-family */
 $font-primary: 'zippy', sans-serif;
