--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -2,7 +2,7 @@
 @use '../abstracts/variables';
 .navbar {
   padding: 1.6rem 4.8rem .8rem;
-  background: variables.$color-purple;
+  background: variables.$color-green;
   &__logo {
       margin-right: 3.2rem;
   }
@@ -14,7 +14,7 @@
       margin-right: 1.6rem;
       text-transform: uppercase;
       &:hover {
-          color: variables.$color-blue-light;
+          color: variables.$color-blue;
       }
   }
   &__icon {
@@ -34,7 +34,7 @@
 
 
       &:hover {
-          color: variables.$color-blue-light;
+          color: variables.$color-blue;
       }
   }
 }
