Added hero image and updated nav items

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,28 +1,29 @@
 <div class="hero" data-testid="Hero">
   <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-3">
-    <div class="hero__container--left">
-        <div class="hero__details">
-          <div class="hero__name">
-            Lawrence Dovin
+    <div class="row">
+      <div class="col-md-3">
+      <div class="hero__container--left">
+          <div class="hero__details">
+            <div class="hero__name">
+              Lawrence Dovin
+            </div>
+            <div class="hero__underline--big"></div>
+            <div class="hero__underline--small"></div>
+            <div class="hero__title">
+                Software Engineer
+            </div>
+            <a href="/" class="hero__button--contact btn">
+              <span>Contact Me</span>
+            </a>
           </div>
-          <div class="hero__underline--big"></div>
-          <div class="hero__underline--small"></div>
-          <div class="hero__title">
-              Software Engineer
-          </div>
-          <a href="/" class="hero__button--contact btn">
-            <span>Contact Me</span>
-          </a>
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div class="hero__container--right">
+          <img src="../../../assets/images/hero.jpg" class="hero__image" alt="bird"/>
+          <!-- <img src={process.env.PUBLIC_URL + 'mountain.jpg'} class="hero__image" alt="mountains"/> -->
         </div>
       </div>
     </div>
-    <div class="col-md-9">
-      <div class="hero__container--right">
-        <!-- <img src={process.env.PUBLIC_URL + 'mountain.jpg'} class="hero__image" alt="mountains"/> -->
-      </div>
-    </div>
-  </div>
   </div>
 </div>
