--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -1,7 +1,7 @@
 /* Navbar */
 @use '../abstracts/variables';
 .navbar {
-  padding: 1.6rem 4.8rem .8rem;
+  padding: 2.4rem 4.8rem .8rem;
   background: variables.$color-green;
   &__logo {
       margin-right: 3.2rem;
@@ -13,14 +13,15 @@
       font-size: variables.$font-size-small;
       margin-right: 1.6rem;
       text-transform: uppercase;
+      margin-top: .6rem;
       &:hover {
           color: variables.$color-blue;
       }
   }
   &__icon {
       &--portfolio {
-          height: 3.2rem;
-          width: 3.2rem;
+          height: 4rem;
+          width: 4rem;
       }
   }
 
@@ -37,8 +38,4 @@
           color: variables.$color-blue;
       }
   }
-}
-
-.container-fluid {
-  padding: 0;
 }
