Added bootstrap icons for navbar

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -27,15 +27,13 @@
       <div class="d-flex">
           <ul class="navbar-nav me-2">
               <li class="nav-item navbar__social-container">
-                <a className="nav-link navbar__social" href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
-                  <!-- <FontAwesomeIcon icon={['fab', 'linkedin-in']} /> -->
-                  LinkedIn
-                </a>
+                  <a href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
+                    <i class="bi bi-linkedin nav-link navbar__social" ></i>
+                  </a>
               </li>
               <li class="nav-item navbar__social-container">
-                <a className="nav-link navbar__social" href="https://github.com/lawrencedovin/" target="_blank" rel="noreferrer">
-                    <!-- <FontAwesomeIcon icon={['fab', 'github-alt']} /> -->
-                    Github
+                <a href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
+                  <i class="bi bi-github nav-link navbar__social" ></i>
                 </a>
               </li>
           </ul>
