Updated navbar font size and hero height

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,6 +3,8 @@ $color-white: #fff;
 $color-black: #162B42;
 
 $color-green: #003810;
+$color-green-light: #016B5B;
+
 $color-blue: #00BBD4;
 $color-brown: #5F3819;
 $color-red: #FF0000;
@@ -26,7 +28,7 @@ $font-hero: 'adventium_demoregular', sans-serif;
 /* Font-size */
 $font-size-large: 4rem;
 $font-size-medium: 2.4rem;
-$font-size-small: 1.2rem;
+$font-size-small: 1.6rem;
 
 /* Font-weight */
 $bold: 400;
