--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -5,6 +5,7 @@
   width: 100%;
   position: relative;
   z-index: 0;
+  background: linear-gradient(180deg, variables.$color-green 0.94%, variables.$color-blue 100%);
 
   &::before {
       content: "";
@@ -14,8 +15,9 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background: linear-gradient(180deg, variables.$color-green 0.94%, variables.$color-blue 100%);
-      clip-path: polygon(0 0, 100% 0, 100% 0, 0 100%);
+      background: white;
+      // clip-path: polygon(0 0, 100% 0, 100% 0, 0 100%);
+      clip-path: polygon(100% 0, 0% 100%, 100% 100%);
   }
 
   &__container {
