--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="hero" data-testid="Hero">
+<div class="hero">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-3">
