--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -2,22 +2,22 @@
 @use '../abstracts/variables';
 .hero {
   height: calc(100vh - 8rem);
-  width: 100%;
+  min-width: 100%;
   position: relative;
-  z-index: 0;
+  z-index: -1;
   background: linear-gradient(180deg, variables.$color-green 0.94%, variables.$color-blue 100%);
 
   &::before {
       content: "";
       position: absolute;
-      z-index: -1;
+      z-index: 0;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      background: white;
-      // clip-path: polygon(0 0, 100% 0, 100% 0, 0 100%);
+      background: variables.$color-white;
       clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+      height: calc(100vh - 8rem + .3px);
   }
 
   &__container {
