--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -12,7 +12,7 @@
             <div class="hero__title">
                 Software Engineer
             </div>
-            <a href="/" class="hero__button--contact btn">
+            <a href="/" class="hero__button btn">
               <span>Contact Me</span>
             </a>
           </div>
