--- a/src/app/components/page-preview/page-preview.component.html
+++ b/src/app/components/page-preview/page-preview.component.html
@@ -1,22 +1,20 @@
-<div class="row hero__container--preview">
-  <div class="col-md-4 hero__item--preview">
-    <div class="hero__image-container--preview">
-      <!-- <img src={process.env.PUBLIC_URL + 'logo192.png'} class="hero__image--preview" alt="mountains"/> -->
+<div class="row page-preview__container">
+  <div class="col-md-4 page-preview__item">
+    <div class="page-preview__image-container">
+      <img src="/assets/images/angular-logo.png" class="page-preview__image" alt="portfolio page about"/>
     </div>
-    <a href="/" class="hero__button--preview hero__button--preview-about btn"><span>About</span></a>
+    <a href="/" class="page-preview__button page-preview__button--about btn"><span>About</span></a>
   </div>
-  <div class="col-md-4 hero__item--preview">
-    <div class="hero__image-container--preview">
-      <img src="/assets/images/angular-logo.png" class="hero__image--preview" alt="logo"/>
+  <div class="col-md-4 page-preview__item">
+    <div class="page-preview__image-container">
+      <img src="/assets/images/angular-logo.png" class="page-preview__image" alt="portfolio page resume"/>
     </div>
-    <a href="/" class="hero__button--preview hero__button--preview-resume btn"><span>Resume</span></a>
+    <a href="/" class="page-preview__button page-preview__button--resume btn"><span>Resume</span></a>
   </div>
-
-
-  <div class="col-md-4 hero__item--preview">
-    <div class="hero__image-container--preview">
-      <!-- <img src={process.env.PUBLIC_URL + 'logo192.png'} class="hero__image--preview" alt="mountains"/> -->
+  <div class="col-md-4 page-preview__item">
+    <div class="page-preview__image-container">
+      <img src="/assets/images/angular-logo.png" class="page-preview__image" alt="portfolio page preview"/>
     </div>
-    <a href="/" class="hero__button--preview hero__button--preview-portfolio btn"><span>Portfolio</span></a>
+    <a href="/" class="page-preview__button page-preview__button--portfolio btn"><span>Portfolio</span></a>
   </div>
 </div>
