--- a/src/styles/components/_forms.scss
+++ b/src/styles/components/_forms.scss
@@ -1,1 +1,38 @@
 /* Forms */
+// .contact {
+//   &__form {
+//       padding: 8rem 4rem;
+//       padding-left: 33.6rem;
+//       display: inline-block;
+//       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+//       &--info {
+//           padding: 4.8rem 5.6rem;
+//           display: inline-block;
+//           background: linear-gradient(161.18deg, $color-purple -9.31%, rgba(36, 0, 41, 0) 108.92%);
+//           filter: drop-shadow(0px 6px 20px rgba(37, 133, 154, 0.3));
+//       }
+//       &--info-title,
+//       &--info-details {
+//           font-family: $font-primary;
+//           color: $color-white;
+//           font-weight: $light;
+//           text-align: left;
+
+//       }
+//       &--info-title {
+//           font-size: $font-size-medium;
+//           margin-bottom: 6.4rem;
+//       }
+//       &--info-details {
+//           $font-size: $font-size-small;
+//       }
+//       &--info-details:not(:last-child) {
+//           padding-bottom: 2.4rem;
+//       }
+
+//       &-container {
+//           margin-top: 25.6rem;
+//           text-align: center;
+//       }
+//   }
+// }
