Updated contact form styles

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -53,7 +53,7 @@
 
 .page-preview {
   &__button {
-      background-color: variables.$color-green;
+      background-color: variables.$color-green-light;
       color: variables.$color-white;
 
     & span {
