--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,15 +1,15 @@
-<div className="contact__form-container">
-  <div className="contact__form--info">
-    <h1 className="contact__form--info-title">
+<div class="contact-form__container">
+  <div class="contact-form__info">
+    <h1 class="contact-form__info-title">
       Contact
     </h1>
     <ul>
-      <li className="contact__form--info-details"><span><i className="fas fa-map-marker-alt"></i>Rockville, Maryland</span></li>
-      <li className="contact__form--info-details"><span><i className="fas fa-phone"></i>(610) 579-1888</span></li>
-      <li className="contact__form--info-details"><span><i className="fas fa-envelope"></i>lawrence.dovin@hotmail.com</span></li>
+      <li class="contact-form__info-details"><span><i class="fas fa-map-marker-alt"></i>Rockville, Maryland</span></li>
+      <li class="contact-form__info-details"><span><i class="fas fa-phone"></i>(610) 579-1888</span></li>
+      <li class="contact-form__info-details"><span><i class="fas fa-envelope"></i>lawrence.dovin@hotmail.com</span></li>
     </ul>
   </div>
-  <form className="contact__form">
+  <form class="contact-form">
 
   </form>
 </div>
