--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -13,7 +13,7 @@
                 Software Engineer
             </div>
             <a href="/" class="hero__button btn">
-              <span>Contact Me</span>
+              <span>Contact</span>
             </a>
           </div>
         </div>
