--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -5,7 +5,10 @@
   border: none;
   text-align: center;
   font-size: 1.6rem;
+  font-family: variables.$font-primary;
+  text-transform: uppercase;
   padding: 1.2rem;
+  padding-top: 1.6rem;
   width: 16rem;
   transition: all 0.5s;
   cursor: pointer;
@@ -46,7 +49,7 @@
     }
 
     & span:after {
-      content: '\260E';
+      content: '☎️';
     }
   }
 }
