Added initial footer styles

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -4,7 +4,7 @@
   border-radius: 4rem;
   border: none;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: variables.$font-size-small;
   font-family: variables.$font-primary;
   text-transform: uppercase;
   padding: 1.2rem;
