--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,1 +1,51 @@
 /* Footer */
+@use '../abstracts/variables';
+.footer {
+  background: -webkit-linear-gradient(1turn, variables.$color-green, variables.$color-blue);
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
+
+  // &-container {
+  //     position: absolute;
+  //     right: 0;
+  //     bottom: 0;
+  //     left: 0;
+  // }
+
+  &-fix {
+      height: 32rem;
+  }
+
+  &__button {
+      border: 1px solid variables.$color-blue;
+      margin: 11.4rem 0 2.4rem;
+      padding: .6rem 1rem .8rem;
+      border-radius: 2px;
+
+      &-icon {
+          filter: invert(64%) sepia(74%) saturate(340%) hue-rotate(134deg) brightness(93%) contrast(85%);
+          height: 1.6rem;
+      }
+
+      &:hover {
+          background: variables.$color-blue;
+          & > #footerButtonIcon {
+              filter: invert(100%) sepia(1%) saturate(7500%) hue-rotate(305deg) brightness(106%) contrast(103%);
+          }
+      }
+  }
+
+  &__text {
+      font-size: variables.$font-size-small;
+      display: inline-flex;
+      align-items: center;
+  }
+
+  &__made-with {
+      color: variables.$color-white;
+  }
+
+  &__icon {
+      margin: auto .8rem;
+  }
+}
