--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -19,7 +19,7 @@
                       and
                       <i class="fas fa-pizza-slice footer__icon"></i>
                   </span>
-                  <span class="footer__text footer__copyright">© 2021 Wonder Recipe</span>
+                  <span class="footer__text footer__copyright">© 2021 Lawrence Dovin</span>
               </div>
           </div>
       </div>
