--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,16 +1,10 @@
 /* Footer */
 @use '../abstracts/variables';
 .footer {
-  background: -webkit-linear-gradient(1turn, variables.$color-green, variables.$color-blue);
+  background: linear-gradient(90deg, variables.$color-green 0%, variables.$color-blue-light 100%);
   padding-top: 3.2rem;
   padding-bottom: 3.2rem;
-
-  // &-container {
-  //     position: absolute;
-  //     right: 0;
-  //     bottom: 0;
-  //     left: 0;
-  // }
+  font-family: variables.$font-primary;
 
   &-fix {
       height: 32rem;
