added footer button

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-12 d-flex justify-content-end">
             <a href="#" class="footer__button">
-                <!-- <img src={`/${process.env.PUBLIC_URL}icons/top-icon.svg`} alt="" class="footer__button-icon" id="footerButtonIcon" /> -->
+                <img src="../../../assets/images/top-icon.svg" alt="" class="footer__button-icon" id="footerButtonIcon" />
             </a>
         </div>
       </div>
