Updated form card

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -3,10 +3,24 @@
     <h1 class="contact-form__info-title">
       Contact
     </h1>
-    <ul>
-      <li class="contact-form__info-details"><span><i class="fas fa-map-marker-alt"></i>Rockville, Maryland</span></li>
-      <li class="contact-form__info-details"><span><i class="fas fa-phone"></i>(610) 579-1888</span></li>
-      <li class="contact-form__info-details"><span><i class="fas fa-envelope"></i>lawrence.dovin@hotmail.com</span></li>
+    <ul class="contact-form__info-details-container">
+      <li class="contact-form__info-details">
+        <span><i class="fas fa-map-marker-alt contact-form__info-icon-details"></i>Bowie, Maryland</span>
+      </li>
+      <li class="contact-form__info-details">
+        <span><i class="fas fa-phone contact-form__info-icon-details"></i>(610) 579-1888</span>
+      </li>
+      <li class="contact-form__info-details">
+        <span><i class="fas fa-envelope contact-form__info-icon-details"></i>lawrence.dovin@hotmail.com</span>
+      </li>
+    </ul>
+    <ul class="contact-form__info-social-container">
+      <li class="contact-form__info-icon-social">
+        <i class="bi bi-linkedin contact-form__info-icon-details"></i>
+      </li>
+      <li class="contact-form__info-icon-social">
+        <i class="bi bi-github contact-form__info-icon-details"></i>
+      </li>
     </ul>
   </div>
   <form class="contact-form">
