Added initial contact form elements

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -24,6 +24,11 @@
     </ul>
   </div>
   <form class="contact-form">
-
+    <h1>Get in Touch!</h1>
+    <span>Feel free to <i class="fas fa-envelope contact-form__info-icon-details"></i> a Message</span>
+      <input type="text" class="form-control" placeholder="Your Name*">
+      <input type="text" class="form-control" placeholder="Your Email*">
+      <textarea class="form-control" placeholder="Your Message*"></textarea>
+    <button>SEND MESSAGE</button>
   </form>
 </div>
