--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -29,6 +29,6 @@
       <input type="text" class="form-control" placeholder="Your Name*">
       <input type="text" class="form-control" placeholder="Your Email*">
       <textarea class="form-control" placeholder="Your Message*"></textarea>
-    <button>SEND MESSAGE</button>
+    <button class="contact-form__button btn">SEND MESSAGE</button>
   </form>
 </div>
