--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -54,6 +54,13 @@
   }
 }
 
+.contact-form {
+  &__button {
+    background-color: variables.$color-green-light;
+    color: variables.$color-white;
+  }
+}
+
 .page-preview {
   &__button {
       background-color: variables.$color-green-light;
