Added initial form classes for form input

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -26,9 +26,9 @@
   <form class="contact-form">
     <h1>Get in Touch!</h1>
     <span>Feel free to <i class="fas fa-envelope contact-form__info-icon-details"></i> a Message</span>
-      <input type="text" class="form-control" placeholder="Your Name*">
-      <input type="text" class="form-control" placeholder="Your Email*">
-      <textarea class="form-control" placeholder="Your Message*"></textarea>
+      <input type="text" class="contact-form__input form-control" placeholder="Your Name*">
+      <input type="text" class="contact-form__input form-control" placeholder="Your Email*">
+      <textarea class="contact-form__text-area form-control" placeholder="Your Message*"></textarea>
     <button class="contact-form__button btn">SEND MESSAGE</button>
   </form>
 </div>
