--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -13,7 +13,7 @@
   &__button {
       border: 1px solid variables.$color-blue;
       margin: 11.4rem 0 2.4rem;
-      padding: .6rem 1rem .8rem;
+      padding: .6rem .8rem .8rem;
       border-radius: 2px;
 
       &-icon {
