--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -5,21 +5,25 @@
     </h1>
     <ul class="contact-form__info-details-container">
       <li class="contact-form__info-details">
-        <span><i class="fas fa-map-marker-alt contact-form__info-icon-details"></i>Bowie, Maryland</span>
+        <span><i class="fas fa-map-marker-alt contact-form__info-icons"></i>Bowie, Maryland</span>
       </li>
       <li class="contact-form__info-details">
-        <span><i class="fas fa-phone contact-form__info-icon-details"></i>(610) 579-1888</span>
+        <span><i class="fas fa-phone contact-form__info-icons"></i>(610) 579-1888</span>
       </li>
       <li class="contact-form__info-details">
-        <span><i class="fas fa-envelope contact-form__info-icon-details"></i>lawrence.dovin@hotmail.com</span>
+        <span><i class="fas fa-envelope contact-form__info-icons"></i>lawrence.dovin@hotmail.com</span>
       </li>
     </ul>
-    <ul class="contact-form__info-social-container">
-      <li class="contact-form__info-icon-social">
-        <i class="bi bi-linkedin contact-form__info-icon-details"></i>
+    <ul class="contact-form__social-container">
+      <li class="contact-form__social">
+        <a href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
+          <i class="bi bi-linkedin contact-form__social-icons contact-form__social-icons"></i>
+        </a>
       </li>
-      <li class="contact-form__info-icon-social">
-        <i class="bi bi-github contact-form__info-icon-details"></i>
+      <li class="contact-form__social">
+        <a href="https://www.linkedin.com/in/lawrence-dovin/" target="_blank" rel="noreferrer">
+          <i class="bi bi-github contact-form__social-icons"></i>
+        </a>
       </li>
     </ul>
   </div>
