--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,17 +1,17 @@
 <div class="contact-form__container">
-  <div class="contact-form__info">
-    <h1 class="contact-form__info-title">
+  <div class="contact-form__contact">
+    <h1 class="contact-form__contact-title">
       Contact
     </h1>
-    <ul class="contact-form__info-details-container">
-      <li class="contact-form__info-details">
-        <span><i class="fas fa-map-marker-alt contact-form__info-icons"></i>Bowie, Maryland</span>
+    <ul class="contact-form__contact-details-container">
+      <li class="contact-form__contact-details">
+        <span><i class="fas fa-map-marker-alt contact-form__contact-icons"></i>Bowie, Maryland</span>
       </li>
-      <li class="contact-form__info-details">
-        <span><i class="fas fa-phone contact-form__info-icons"></i>(610) 579-1888</span>
+      <li class="contact-form__contact-details">
+        <span><i class="fas fa-phone contact-form__contact-icons"></i>(610) 579-1888</span>
       </li>
-      <li class="contact-form__info-details">
-        <span><i class="fas fa-envelope contact-form__info-icons"></i>lawrence.dovin@hotmail.com</span>
+      <li class="contact-form__contact-details">
+        <span><i class="fas fa-envelope contact-form__contact-icons"></i>lawrence.dovin@hotmail.com</span>
       </li>
     </ul>
     <ul class="contact-form__social-container">
@@ -28,8 +28,10 @@
     </ul>
   </div>
   <form class="contact-form">
-    <h1>Get in Touch!</h1>
-    <span>Feel free to <i class="fas fa-envelope contact-form__info-icon-details"></i> a Message</span>
+    <h1 class="contact-form__title">Get in Touch!</h1>
+    <div class="contact-form__description-container">
+      <span class="contact-form__description">Feel free to <i class="fa-solid fa-droplet contact-form__description-icon"></i> a Message</span>
+    </div>
       <input type="text" class="contact-form__input form-control" placeholder="Your Name*">
       <input type="text" class="contact-form__input form-control" placeholder="Your Email*">
       <textarea class="contact-form__text-area form-control" placeholder="Your Message*"></textarea>
