--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -90,3 +90,24 @@
       }
   }
 }
+
+.footer {
+  &__button {
+    border: 1px solid variables.$color-blue;
+    margin: 11.4rem 0 2.4rem;
+    padding: .6rem .8rem .8rem;
+    border-radius: 2px;
+
+    &-icon {
+        filter: invert(64%) sepia(74%) saturate(340%) hue-rotate(134deg) brightness(93%) contrast(85%);
+        height: 1.6rem;
+    }
+
+    &:hover {
+        background: variables.$color-blue;
+        & > #footerButtonIcon {
+            filter: invert(100%) sepia(1%) saturate(7500%) hue-rotate(305deg) brightness(106%) contrast(103%);
+        }
+    }
+}
+}
