Form now submits!

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -116,12 +116,7 @@
     >
   </div>
   <div class="contact-form__input-container">
-    <textarea
-      class="contact-form__text-area form-control"
-      name="message"
-      placeholder="Your Message"
-    >
-    </textarea>
+    <textarea class="contact-form__text-area form-control" placeholder="Enter Message..." name="message" required></textarea>
   </div>
   <button type="submit" class="contact-form__button btn">SEND MESSAGE</button>
 </form>
