Update form text area'

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -116,7 +116,7 @@
     >
   </div>
   <div class="contact-form__input-container">
-    <textarea class="contact-form__text-area form-control" placeholder="Enter Message..." name="message" required></textarea>
+    <textarea class="contact-form__text-area form-control" placeholder="Enter Message..." name="message" required rows="7"></textarea>
   </div>
   <button type="submit" class="contact-form__button btn">SEND MESSAGE</button>
 </form>
