Added technology colors

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,6 +9,16 @@ $color-blue: #00BBD4;
 $color-red: #FF0000;
 $color-grey: #828282;
 
+$color-red--angular: #DD1B16;
+$color-blue--react: #61DBFB;
+$color-yellow--javascript: #F0DB4F;
+$color-orange--express: #FF6501;
+$color-green--node: #3C873A;
+$color-blue--python: #3472A3;
+$color-black--flask: #000000;
+$color-pink--sass: #CD71A5;
+$color-purple--bootstrap: #553C7B;
+
 /* Font-family */
 $font-primary: 'zippy', sans-serif;
 $font-secondary: 'Montserrat', sans-serif;
